# ai-devflow-engine

./: .gitignore  AGENTS.md  LICENSE  README.md  README.zh.md  pyproject.toml
.codex/skills/acceleration-workflow/: SKILL.md
.codex/skills/delivery-branch-coordinator/: SKILL.md
.codex/skills/git-delivery-workflow/: SKILL.md
backend/: alembic.ini
backend/alembic/: env.py
backend/app/: __init__.py  main.py
backend/tests/: conftest.py  test_engineering_baseline.py
docs/: README.md  getting-started.md
docs/api/: function-one-openapi-notes.md
docs/architecture/: overview.md  project-structure.md
docs/archive/: function-one-delivery-branch-plan-legacy.md  function-one-design-v1.md  function-one-design-v2.md
docs/development/: langsmith-observability.md  verification.md
docs/plans/: function-one-acceleration-execution-plan.md  function-one-delivery-branch-plan.md  function-one-platform-acceptance-checklist.md  function-one-platform-plan.md  technical-debt-cleanup-index.md  website-redesign-design.md  website-redesign-implementation-plan.md
docs/specs/: frontend-workspace-global-design-v1.md  function-one-backend-engine-design-v1.md  function-one-design-v2.md  function-one-product-overview-v1.md
e2e/: package-lock.json  package.json  playwright.config.ts
e2e/support/: live-backend-server.py  run-live-e2e.mjs
e2e/tests/: function-one-control-flow-live.spec.ts  function-one-control-flow.spec.ts  function-one-full-flow.spec.ts
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.test.ts  main.tsx
(+697 files in other folders)
